...
            <objects>
                <viewController id="xSj-Tc-4qv" customClass="InformationsViewController" customModule="NikoNiko" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="wzt-kh-mRn">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="300" height="50"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Icon : Avion png de .pngtree.com" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="shC
                                                <rect key="frame" x="0.0" y="0.0" width="300" height="50"/>
                                                <fontDescription key="fontDescription" name="Monaco" family="Monaco" pointSize="14"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PvV-JL-dlO">
                                                <rect key="frame" x="0.0" y="0.0" width="300" height="50"/>
                                                <accessibility key="accessibilityConfiguration" identifier="iconPngTree"/>
                                                <fontDescription key="fontDescription" name="Monaco" family="Monaco" pointSize="14"/>
                                                <connections>
...
                                        <rect key="frame" x="0.0" y="53" width="300" height="50"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Développeuse mobile iOS - Angélique Babin - AngeAppDev" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoCo
                                                <rect key="frame" x="0.0" y="0.0" width="300" height="50"/>
                                                <fontDescription key="fontDescription" name="Monaco" family="Monaco" pointSize="14"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K39-Kd-YfT">
                                                <rect key="frame" x="0.0" y="0.0" width="300" height="50"/>
                                                <accessibility key="accessibilityConfiguration" identifier="devios"/>
                                                <fontDescription key="fontDescription" name="Monaco" family="Monaco" pointSize="14"/>
                                                <connections>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Osf-Nj-43w" userLabel="LinkedInButton">
                                                <rect key="frame" x="0.0" y="0.0" width="240" height="150"/>
                                                <accessibility key="accessibilityConfiguration" identifier="badgeLinkedIn"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                <state key="normal">
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Credits" id="AWX-CF-cSZ">
                        <barButtonItem key="backBarButtonItem" title="Credits" id="fej-MM-FMJ">
                            <color key="tintColor" red="0.034298732880000002" green="0.0002846512652" blue="0.5804288983" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
...
                        <viewLayoutGuide key="safeArea" id="5hs-fX-KpE"/>
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <accessibility key="accessibilityConfiguration" identifier="webView"/>
                        <constraints>
                            <constraint firstItem="fN6-Tq-jfS" firstAttribute="bottom" secondItem="5hs-fX-KpE" secondAttribute="bottom" id="5Q2-Yh-98l"/>
...
                        </barButtonItem>
                    </toolbarItems>
                    <navigationItem key="navigationItem" title="Web" id="uDp-Zh-NA7">
                        <barButtonItem key="backBarButtonItem" title="Back" id="9Rr-PZ-TF6">
                            <color key="tintColor" red="0.034298732880000002" green="0.0002846512652" blue="0.5804288983" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
...
