...
    }
    
    // MARK: - Methods
    
    private func setButtonsBarItem() {
        forwardBarItem = UIBarButtonItem(title: ">>", style: .plain, target: self, action: #selector(forwardAction))
        backBarItem = UIBarButtonItem(title: "<<", style: .plain, target: self, action: #selector(backAction))
        refreshBarItem = UIBarButtonItem(barButtonSystemItem: .refresh, target: self, action: #selector(refresh))
    }
        
    @objc private func forwardAction() {
        if webView.canGoForward {
            webView.goForward()
...
