...
            </objects>
            <point key="canvasLocation" x="-593" y="175"/>
        </scene>
        <!--MoodBoard-->
        <scene sceneID="dhV-Qi-IaL">
            <objects>
                <viewControllerPlaceholder storyboardName="MoodBoard" id="Hjw-0D-129" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="MoodBoard" id="CC7-h4-oNm"/>
                </viewControllerPlaceholder>
                <placeholder placeholderIdentifier="IBFirstResponder" id="6sG-c7-cgS" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="214" y="15"/>
        </scene>
...
